frontend/src/App.css
/* Main styles for the application */

body {
	font-family: 'Playwrite NZ', cursive;
	background: linear-gradient(#f9f6d9 150px, transparent 150px) left / 100% 100%, repeating-linear-gradient(#837575 0, #837575 1px, #f9f6d9 1px, #f9f6d9 40px) left / 100% 100%;
	background-attachment: scroll;
	background-color: #f9f6d9;
	min-height: 100vh;
	display: grid;
}

body::before {
	content: '';
	position: absolute;
	top: 0;
	left: 200px;
	width: 2px;
	height: 100%;
	background-color: #e74c3c;
	z-index: 1;
}

.app-container {
	display: flex;
	flex-direction: column;
	z-index: 2;
}

.header-container {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-top: 44px;
	position: relative;
	width: 100%;
	padding: 12px 0px;
	box-sizing: border-box;
}

.date-container {
	font-family: 'Playwrite NZ', cursive;
	color: #000;
	margin-top: 19px;
	flex: 1;
	font-size: 18px;
	margin-left: 12px;
}

.header-title {
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	white-space: nowrap;
	font-size: 40px;
}

.sign-in-button {
	background-color: transparent;
	color: #000;
	font-family: 'Playwrite NZ', cursive;
	border: none;
	border-radius: 5px;
	transition: background-color 0.3s ease;
	margin-top: 17px;
	margin-right: 60px;
	font-size: 20px;
	cursor: pointer;
}

.sign-in-button:hover {
	background-color: rgba(0, 0, 0, 0.1);
}

.profile-picture-container {
	margin-bottom: -2.5px;
	margin-right: 40px;
	margin-top: -20px;
}

.profile-picture {
	border-radius: 50%;
	vertical-align: middle;
	cursor: pointer;
}

.auth-modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(2px);
	z-index: 1000;
	display: flex;
	align-items: center;
	justify-content: center;
}

.auth-modal-content {
	background: #fffbe6;
	border: 1px solid #d4af37;
	padding: 20px;
	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
	font-family: 'Courier New', Courier, monospace;
	border-radius: 10px;
	width: 240px;
}

.auth-close-button {
	align-self: center;
	background: transparent;
	border: none;
	font-size: 16px;
	cursor: pointer;
}

.auth-tabs {
	display: flex;
	justify-content: center;
	width: 100%;
	margin-bottom: 16px;
}

.auth-tab {
	background: transparent;
	border: none;
	font-size: 18px;
	cursor: pointer;
	padding: 10px 20px;
	font-weight: bold;
	color: #d4af37;
	border-bottom: 2px solid transparent;
	transition: border-color 0.3s ease;
}

.auth-tab:hover,
.auth-tab.active {
	border-color: #d4af37;
}

.auth-form {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.auth-label {
	margin-bottom: 10px;
	display: flex;
	flex-direction: column;
	color: #333;
}

.auth-input {
	padding: 5px;
	margin-top: 5px;
	border: 1px solid #d4af37;
	border-radius: 5px;
	width: 200px;
}

.auth-button {
	padding: 10px 20px;
	background: #d4af37;
	border: none;
	color: white;
	font-weight: bold;
	cursor: pointer;
	margin-top: 10px;
	border-radius: 5px;
}

.auth-button:hover {
	background: #b38b2e;
}

.auth-button-red {
	background-color: red;
	color: white;
	border: none;
	border-radius: 5px;
	padding: 10px 20px;
	cursor: pointer;
	transition: background-color 0.3s ease;
}

.auth-button-red:hover {
	background-color: darkred;
}

.auth-button-green {
	background-color: green;
	color: white;
	border: none;
	border-radius: 5px;
	padding: 10px 20px;
	cursor: pointer;
	transition: background-color 0.3s ease;
}

.auth-button-green:hover {
	background-color: darkgreen;
}

.auth-error {
	color: red;
	margin-top: 2px;
	margin-bottom: 2px;
	text-align: center;
	white-space: pre-wrap;
	max-width: 100%;
	word-break: break-word;
}

.auth-access-text {
	margin-top: 1px;
	margin-bottom: 5px;
	text-align: center;
	white-space: pre-wrap;
	max-width: 100%;
	word-break: break-word;
}

.auth-access-text.success {
	color: green;
}

.auth-access-text.error {
	color: red;
}

.auth-button.disabled {
	background: grey;
	cursor: not-allowed;
}

.auth-access {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: row;
	margin-bottom: 16px;
	width: 210px;
}

.auth-access label {
	text-align: center;
}

.auth-access .auth-input {
	width: calc(100% - 30px);
	border-radius: 5px 0 0 5px;
	margin-right: 0;
}

.auth-input-access {
	flex: 1;
	border-radius: 5px 0 0 5px;
}

.access-check-button {
	background: #d4af37;
	border: none;
	color: white;
	cursor: pointer;
	padding: 0 10px;
	border-radius: 0 5px 5px 0;
	height: 27px;
	margin-top: 5px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.access-check-button:hover {
	background: #b38b2e;
}

.toggle-button {
	background: transparent;
	border: none;
	color: #d4af37;
	cursor: pointer;
	margin-top: 10px;
	text-decoration: underline;
}

.filter-container {
	display: flex;
	align-items: center;
	position: absolute;
	top: 86px;
	left: 6px;
}

.filter-container label {
	margin-right: 12px;
}

.filter-container select {
	border-radius: 4px;
}

.task-list-container {
	width: 85%;
	margin-top: 56px;
	padding-left: 150px;
}

.task-list {
	width: 100%;
	border-collapse: collapse;
	text-align: left;
}

.task-list thead {
	font-size: 20px;
	border-bottom: 6px solid transparent;
}

.task-list th.title {
	width: 30%;
}

.task-list th.description {
	width: 50%;
}

.task-list th.status {
	width: 20%;
}

.task-list tbody {
	font-size: 16px;
}

.task-item {
	border-bottom: 7px solid transparent;

	&:editing {
		background-color: #e0f7fa;
	}
}

.task-item-editing input,
select {
	background-color: rgba(0, 0, 0, 0.1);
	border-radius: 5px;
	border: transparent;
	font-size: 16px;
	font-family: 'Playwrite NZ', cursive;
}

.task-edit-button {
	padding-right: 36px;
	vertical-align: middle;
	text-align: center;
}

.task-edit-button button {
	background-color: transparent;
	border: none;
	cursor: pointer;
	font-family: 'Playwrite NZ', cursive;
	font-size: 14px;
	text-decoration: underline;
	transition: color 0.3s ease;
	border-radius: 5px;
}

.task-edit-button button:hover {
	background-color: rgba(0, 0, 0, 0.1);
}

@media (max-width: 600px) {
	.header-container {
		margin-top: 20px;
		padding: 6px 0px;
	}

	.date-container {
		font-size: 14px;
		margin-left: 6px;
		word-break: break-word;
	}

	.header-title {
		font-size: 28px;
	}

	.sign-in-button {
		font-size: 16px;
		margin-right: 30px;
	}

	.task-list th.title,
	.task-list th.description,
	.task-list th.status {
		font-size: 16px;
	}
}

